--- a/templates/add_student.html
+++ b/templates/add_student.html
@@ -17,6 +17,14 @@ Add Student
             <label for="roll-no" class="form-label">Roll Number</label>
             <input type="text" class="form-control" name="roll-no" >
         </div>
+        <div class="mb-3">
+            <label for="telugu" class="form-label">Telugu</label>
+            <input type="number" class="form-control" name="telugu">
+        </div>
+        <div class="mb-3">
+            <label for="sanskrit" class="form-label">Sanskrit</label>
+            <input type="number" class="form-control" name="sanskrit">
+        </div>
 
         <div class="mb-3">
             <label for="maths" class="form-label">Maths</label>
