--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -13,7 +13,8 @@
         <tr>
             <th scope="col">Roll No.</th>
             <th scope="col">Name</th>
-
+            <th scope="col">Telugu</th>
+            <th scope="col">Sanskrit</th>
             <th scope="col">Maths</th>
             <th scope="col">Science</th>
             <th scope="col">Total Marks</th>
@@ -27,7 +28,8 @@
         <tr>
             <th scope="row">{{s.roll_no}}</th>
             <td>{{s.name}}</td>
-
+            <td>{{s.telugu}}</td>
+            <td>{{s.sanskrit}}</td>
             <td>{{s.maths}}</td>
             <td>{{s.science}}</td>        
             <td>{{s.total}}</td>
