--- a/templates/edit.html
+++ b/templates/edit.html
@@ -19,6 +19,14 @@ Edit Panel
             <label for="roll-no" class="form-label">Roll Number</label>
             <input type="text" class="form-control" name="roll-no" value='{{student.roll_no}}'>
         </div>
+         <div class="mb-3">
+            <label for="telugu" class="form-label">Telugu</label>
+            <input type="text" class="form-control" name="telugu" value='{{student.telugu}}'>
+        </div>
+         <div class="mb-3">
+            <label for="sanskrit" class="form-label">Sanskrit</label>
+            <input type="text" class="form-control" name="sanskrit" value='{{student.sanskrit}}'>
+        </div>
 
         <div class="mb-3">
             <label for="maths" class="form-label">Maths</label>
