--- a/templates/result.html
+++ b/templates/result.html
@@ -21,8 +21,9 @@
         </tr>
     </thead>
     <tbody>
+
         <tr>
-            <th scope="row">{{roll_no}}</th>
+            <td>{{ roll_no }}</td>
             <td>{{name}}</td>
             <td>{{telugu}}</td>
             <td>{{sanskrit}}</td>
@@ -30,13 +31,16 @@
             <td>{{science}}</td>
             <td>{{total}}</td>
             <td>{{percent}}</td>
-            {% if status == 'Pass' %}
-                <td><p class="btn btn-success">{{status}}</p></td>
+            {% if status == 'Pass'%}
+                <td>{{ status }}</td>
             {% else %}
-            <td><p class="btn btn-danger">{{status}}</p></td>
+                <td>{{ status }}</td>
+
             {% endif %}
 
+
         </tr>
+
 
     </tbody>
 </table>
